--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pika==1.2.0
-pydantic==1.9.0
-py-eureka-client==0.10.4
-numpy==1.22.2
+pydantic[dotenv]==1.9.0
+py-eureka-client==0.10.5
+numpy==1.22.3
 scipy==1.8.0
 scikit-learn==1.0.2
+amqp-rpc-server~=1.1.2
