--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ numpy==1.22.3
 scipy==1.8.0
 scikit-learn==1.0.2
 amqp-rpc-server~=1.1.2
+sqlalchemy~=1.4.35
+psycopg2-binary~=2.9.3
+geoalchemy2~=0.11.1
