--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-pydantic[dotenv]==1.9.0
-py-eureka-client==0.10.5
-numpy==1.22.3
-scipy==1.8.0
-scikit-learn==1.0.2
+pydantic[dotenv]~=1.9.0
+py-eureka-client~=0.10.5
+numpy~=1.22.3
+scipy~=1.8.0
+scikit-learn~=1.0.2
 amqp-rpc-server~=1.1.2
 sqlalchemy~=1.4.35
 psycopg2-binary~=2.9.3
 geoalchemy2~=0.11.1
+pandas~=1.4.2
