--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-pydantic[dotenv]~=1.9.0
+pydantic~=1.9.0
+python-dotenv~=0.20.0
 py-eureka-client~=0.10.5
 numpy~=1.22.3
 scipy~=1.8.0
 scikit-learn~=1.0.2
 amqp-rpc-server~=1.1.2
-sqlalchemy~=1.4.35
+sqlalchemy~=1.4.36
 psycopg2-binary~=2.9.3
 geoalchemy2~=0.11.1
 pandas~=1.4.2
