--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
-pydantic~=1.9.1
-python-dotenv~=0.20.0
-py-eureka-client~=0.10.5
-numpy~=1.22.4
-scipy~=1.8.1
-scikit-learn~=1.1.1
-amqp-rpc-server~=1.2.2
-sqlalchemy~=1.4.36
-psycopg2-binary~=2.9.3
-geoalchemy2~=0.11.1
-pandas~=1.4.2
-ujson~=5.3.0
+GeoAlchemy2==0.13.3
+greenlet==2.0.2
+joblib==1.2.0
+numpy==1.24.3
+packaging==23.1
+pandas==2.0.1
+psycopg2-binary==2.9.6
+pydantic==1.10.8
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3
+scikit-learn==1.2.2
+scipy==1.10.1
+six==1.16.0
+SQLAlchemy==1.4.36
+threadpoolctl==3.1.0
+typing_extensions==4.6.0
+tzdata==2023.3
+ujson==5.7.0
